k8s/redis-ha-test.yaml
# Source: redis-ha/templates/tests/test-redis-ha-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-ha-configmap-test
  labels:
    app: redis-ha
spec:
  priorityClassName: best-effort-priority
  containers:
  - name: check-init
    image: koalaman/shellcheck:v0.5.0
    args:
    - --shell=sh
    - /readonly-config/init.sh
    volumeMounts:
    - name: config
      mountPath: /readonly-config
      readOnly: true
  - name: check-probes
    image: koalaman/shellcheck:v0.5.0
    args:
    - --shell=sh
    - /probes/check-quorum.sh
    volumeMounts:
    - name: probes
      mountPath: /probes
      readOnly: true
  volumes:
  - name: config
    configMap:
      name: redis-ha-configmap
  - name: probes
    configMap:
      name: redis-ha-probes
  restartPolicy: Never

---
# Source: redis-ha/templates/tests/test-redis-ha-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-ha-service-test
  labels:
    app: redis-ha
spec:
  priorityClassName: best-effort-priority
  containers:
  - name: "service-test"
    image: redis:5.0.3-alpine
    command:
      - sh
      - -c
      - redis-cli -h redis-ha -p 6379 info server
  restartPolicy: Never

---
