k8s/prylabs-wildcard-gateway.yaml
# Note: Gateways cannot share the same TLS certificates so this wild card 
# gateway should be used for all services requesting *.prylabs.net.
# See: https://github.com/istio/istio/issues/9429
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prylabs-wildcard-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - goerli.prylabs.net
    tls:
      httpsRedirect: false
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.prylabs.net"
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
